--- a/SimpleFeedReader/SimpleFeedReader.csproj
+++ b/SimpleFeedReader/SimpleFeedReader.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <UserSecretsId>cf081de0-039a-4c6c-85fb-fcc90d40b895</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="5.0.1" />
